examples/type_system/failing/131_call_arg_span_precision.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn pair(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let _x = pair(1, "oops")
}
